# UrbanFlux

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  STYLEGUIDE.md  TECH-DOC.md  docker-compose.yml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/pull_request_template/: pull_request_template.md
.github/workflows/: ci-rust.yml
docs/: CONTRIBUTING.md  QUICKSTART.md  SECURITY.md  STYLEGUIDE.md  TECH-DOC.md  USAGE.md
migrations/: 001_init_schema.sql  20251112000001_init_schema.sql
scripts/: healthcheck.sh
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs
src/clean/: mod.rs  validator.rs
src/database/: connection.rs  mod.rs  repository.rs  watermark.rs
src/db/: mod.rs  schema.rs
src/domain/: mod.rs  models.rs  validation.rs
src/etl/: extract.rs  load.rs  mod.rs  transform.rs
src/extract/: mod.rs  parser.rs  stream.rs
src/transform/: deduplicator.rs  mod.rs  processor.rs
testdata/: sample.csv
