[package]
name = "urbanflux"
version = "0.1.0"
edition = "2021"
authors = ["UrbanFlux Contributors"]
license = "MIT"
description = "High-performance ETL system for NYC 311 Service Request data"
repository = "https://github.com/yourusername/urbanflux"
readme = "README.md"
keywords = ["etl", "data-pipeline", "postgres", "csv", "analytics"]
categories = ["command-line-utilities", "database"]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# CSV processing
csv-async = { version = "1.3", features = ["tokio"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
dotenvy = "0.15"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
# Testing
proptest = "1.5"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
